Se crea 'eventos.html', se agregan imagenes faltantes y enlaces, un articulo que describe la mision de la seccion eventos.

--- a/noctivago-tp1/css/eventos.css
+++ b/noctivago-tp1/css/eventos.css
@@ -1,4 +1,13 @@
 /*ESTILOS DE LA SECCION DE EVENTOS*/
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+ul {
+    list-style: none;
+}
 
 /*PALETA DE COLORES QUE UTILICE, NO ES LA PRINCIPAL (DISCUTIR LA PALETA DE COLORES EN GRUPO)*/
 :root {
@@ -10,16 +19,29 @@
     --color-azul-claro: #426A8C;
     --color--azul-gris: #759CBF;
     --tipografia: Verdana, Geneva, Tahoma, sans-serif;
-    /*
-    --color-rojo-sangre: #5E2023;
-    --color-rojo-medio: #8C031C;
-    --color-rojo-vivo: #BF1120;
-    --color-negro: #252526;
-    */
     
 }
 
-/*CAJA PRINCIPAL DE LA SECCION*/
+/*CAJA PRINCIPAL DE LA SECCION INFO*/
+
+.info {
+    width: 100%;
+    height: 300px;
+    background-color: #0E2F59;
+}
+
+.info__aboutOf {
+    width: 80%;
+    height: 100%;
+    gap: 50px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    text-align: center;
+}
+
+/*CAJA PRINCIPAL DE LA SECCION EVENTOS*/
 .events {
     width: 100%;
     height: auto;
@@ -162,28 +184,3 @@
 .card__access button:hover {
     color: #fff;
 }
-
-
-
-/*
-@media (min-width:360px) {
-    h1 {
-        font-size: 30px;
-    }
-
-    .events {
-        width: 90%;
-    }
-}
-
-@media (min-width:768px){
-
-    h1 {
-        font-size: 50px;
-    }
-
-    .events {
-        width: 60%;
-    }
-}
-*/
