--- a/noctivago-tp1/css/eventos.css
+++ b/noctivago-tp1/css/eventos.css
@@ -5,25 +5,13 @@
     margin: 0;
 }
 
-:root {
-    --color-negro-op: rgba(7, 7, 7, 0.5);
-    --color-negro: #020202;
-    --color-blanco: #fff;
-    --color-azul-oscuro: #092140;
-    --color-azul-marino:#0E2F59;
-    --color-azul-medio: #0E2940;
-    --color-coral: #c2385b;
-    --color--azul-gris: #759CBF;
-    --tipografia: Verdana, Geneva, Tahoma, sans-serif;
-    
-}
 
 /*CAJA PRINCIPAL DE LA SECCION INFO*/
 
 .ev__main {
     background-color: var(--color-negro);
     width: 100%;
-    height: 100vh;
+    /*height: 100vh;*/
     
 }
 
@@ -52,7 +40,6 @@
     font-size: 60px;
     margin-bottom: 20px;
     display: inline-block;
-    animation: escribir 4s steps(40,end), parpadeo 0.7s step-end initial;
 }
 
 /*CAJA PRINCIPAL DE LA SECCION EVENTOS*/
@@ -67,7 +54,7 @@
     justify-content: center;
     flex-wrap: wrap;
     padding: 40px;
-    margin: 30px 0px 30px 0px;
+    /*margin: 30px 0px 30px 0px;*/
 }
 
 .events > h2 {
@@ -110,7 +97,7 @@
 
 
 .card:hover {
-    border: 1px solid var(--color-coral);
+    border: 1px solid var(--color-purpura);
 }
 
 .card__pt1, img {
@@ -141,7 +128,7 @@
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
-    border: 2px solid var(--color-coral);border-radius: 20px;
+    border: 2px solid var(--color-purpura);border-radius: 20px;
     z-index: 1;
     opacity: 0;
     transition: opacity 0.3 ease;
@@ -181,7 +168,7 @@
     border-radius: 0px 0px 10px 10px;
     width: 100%;
     height: 60px;
-    background-color: var(--color-coral);
+    background-color: var(--color-purpura);
 }
 
 .card__access button {
@@ -189,10 +176,7 @@
     height: 30px;
     background-color: transparent;
     border: none;
-}
-
-.card__access button:disabled {
-    color: rgb(75, 77, 77);
+    cursor: pointer;
 }
 
 .card__access button {
