--- a/noctivago-tp1/css/letras.css
+++ b/noctivago-tp1/css/letras.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: caveat;
-    src: url(../fonts/static/Caveat-Bold.ttf) format("truetypr");
+    src: url(../fonts/static/Caveat-Bold.ttf) format("truetype");
     font-weight: 600;
 }
 @font-face {
@@ -21,3 +21,13 @@
     font-weight: 600;
 
 }
+
+@font-face {
+    font-family: 'gothic'; 
+    src: url('/noctivago-tp1/fonts/Special_Gothic/SpecialGothic-Regular.ttf') format('truetype');
+  }
+
+  @font-face {
+    font-family: 'Roboto'; 
+    src: url('/noctivago-tp1/fonts/Roboto/Roboto-VariableFont_wdth\,wght.ttf') format('truetype');
+  }
