--- a/noctivago-tp1/css/styles.css
+++ b/noctivago-tp1/css/styles.css
@@ -4,12 +4,27 @@
     margin: 0;
 }
 
+:root {
+  --color-negro-op: rgba(7, 7, 7, 0.5);
+  --color-negro: #020202;
+  --color-blanco: #fff;
+  --color-azul-oscuro: #092140;
+  --color-azul-marino:#0E2F59;
+  --color-azul-medio: #0E2940;
+  --color-coral: #c2385b;
+  --color-purpura: #9a00ff;
+  --color--azul-gris: #759CBF;
+  --tipografia: Roboto;
+  
+}
+
 a{
     text-decoration: none;
 }
 
 /* aQUI VOY! necesito definir bien los coloros y el estilo parta que tenga coherencia el home. va a ser tematiuca noche, fiesta, vida nocturna. colores como azul negro violeta*/
 nav {
+    width: auto;
     background: linear-gradient(to right, #1e0033, #551b8f);
     padding: 10px 20px;
   }
@@ -56,8 +71,10 @@ h1{
     font-weight: bold;
     padding: 20px;
     margin:20px;
-    font-family: dancing, cursive;
-    font-style: italic;
+    /*font-family: dancing, cursive;*/
+    font-family: Roboto;
+    font-weight:900;
+    /*font-style: italic;*/
     letter-spacing: 3px;
     color:#0e0813;
     text-shadow:   
@@ -73,7 +90,9 @@ h1{
 h3{
     background-color: rebeccapurple(109, 100, 233);
     text-align: center;
-    font-style: italic;
+    font-family: Roboto;
+    font-weight: 700;
+    /*font-style: italic;*/
     padding: 30px;
     margin: 20px;
     font-size: 180%; /*esta bien asi? en porcentaje*/
@@ -120,6 +139,8 @@ img {
 
 body{
     background: linear-gradient(to right,black, rgb(87, 30, 87), rgb(20, 20, 124), black);
+    width: 100%;
+    height: 100vh;
 }
   
   .arrow {
@@ -136,14 +157,22 @@ body{
     transform: scale(1.2);
   }
 
+  main {
+    width: 100%;
+    height: auto;
+  }
+
   footer {
+    width: 100%;
+    height: 120px;
     background: linear-gradient(to right, #1e0033, #330066);
     color: white;
-    padding: 20px 0;
+    padding: 20px;
     text-align: center;
     font-size: 1em;
-    margin-top: auto;
-    margin-bottom: 0;
+    /*margin-top: auto;
+    margin-bottom: 0;*/
+    margin: 0px;
   }
   
   .footer-content {
