--- a/noctivago-tp1/css/styles.css
+++ b/noctivago-tp1/css/styles.css
@@ -17,28 +17,37 @@
   --tipografia: Roboto;
   
 }
-
-a{
-    text-decoration: none;
-}
-
 /* aQUI VOY! necesito definir bien los coloros y el estilo parta que tenga coherencia el home. va a ser tematiuca noche, fiesta, vida nocturna. colores como azul negro violeta*/
+body{
+  background: linear-gradient(to right,black, rgb(87, 30, 87), rgb(20, 20, 124), black);
+  width: 100%;
+  height: 100vh;
+}
+  /*main del index*/
+  #home {
+    width: 100%;
+    height: auto;
+  }
+
 nav {
     width: auto;
     background: linear-gradient(to right, #1e0033, #551b8f);
     padding: 10px 20px;
+    
   }
   
   .nav-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
   }
   
   #logo {
     font-size: 30px;
     font-weight: bold;
     color: white;
+    text-decoration: none;
     
   }
   #logo:hover{
@@ -46,17 +55,19 @@ nav {
     color:violet
   }
  
-  
+  /*disposicion de enlaces izquierdos en el nav*/
   .nav-links {
     display: flex;
     gap: 20px;
     list-style: none;
+    
   }
-  
+  /*color y tamaño de enlaces en el nav*/
   .nav-links a {
     color: white;
     font-size: 18px;
     transition: color 0.3s ease;
+    text-decoration: none;
      
 
   }
@@ -65,16 +76,14 @@ nav {
   }
   
 
-h1{
+#titulo{
     text-align: center;
     font-size: 3em;
     font-weight: bold;
     padding: 20px;
     margin:20px;
-    /*font-family: dancing, cursive;*/
     font-family: Roboto;
     font-weight:900;
-    /*font-style: italic;*/
     letter-spacing: 3px;
     color:#0e0813;
     text-shadow:   
@@ -87,15 +96,14 @@ h1{
 
 }
 
-h3{
+#mision{
     background-color: rebeccapurple(109, 100, 233);
     text-align: center;
     font-family: Roboto;
     font-weight: 700;
-    /*font-style: italic;*/
     padding: 30px;
     margin: 20px;
-    font-size: 180%; /*esta bien asi? en porcentaje*/
+    font-size: 30px; 
     color:#0e0303;
     text-shadow:   
     0 0 5px #9a00ff,
@@ -107,20 +115,18 @@ h3{
 
 
 }
-img {
-  border: 10px groove blueviolet;
-  border-radius: 10px;
-  max-width: 100%;
-  height: auto;
-  display: block;
-  margin: 20px auto;
-}
+
+
 #slide {
   width: 800px;
   height: 430px;
   object-fit: cover;
   border-radius: 15px;
   transition: all 0.5s ease;
+  border: 10px groove blueviolet;
+  border-radius: 10px;
+  display: block;
+  margin: 20px auto;
   
 }
 
@@ -137,11 +143,6 @@ img {
   
 }
 
-body{
-    background: linear-gradient(to right,black, rgb(87, 30, 87), rgb(20, 20, 124), black);
-    width: 100%;
-    height: 100vh;
-}
   
   .arrow {
     background-color: transparent;
@@ -157,10 +158,6 @@ body{
     transform: scale(1.2);
   }
 
-  main {
-    width: 100%;
-    height: auto;
-  }
 
   footer {
     width: 100%;
