modificacion cambios en formularios y estilos

--- a/noctivago-tp1/css/formulario.css
+++ b/noctivago-tp1/css/formulario.css
@@ -2,7 +2,8 @@ body {
     font-family: var(--tipografia);
     background-color:#0b0c10;
     color: #f8f8f8;
-    margin: 40px;
+    margin: 0px;
+    padding: 0;
 }
 
 h1{
@@ -81,12 +82,12 @@ p {
     border-radius: 5px;
     font-weight: bold;
     cursor: pointer;
-  }
-  
+}
+
 .botones button[type="submit"]:hover {
     background-color: #45a29e;
 }
-  
+
 .botones button[type="reset"] {
     background-color: #c3073f;
     color: white;
@@ -94,4 +95,82 @@ p {
 
 .botones button[type="reset"]:hover {
     background-color: #950740;
+}
+
+/* --- NAV --- */
+nav {
+    width: auto;
+    background-color: #1f2833;
+    color: #f8f8f8;
+    padding: 10px 20px;
+}
+
+
+#logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: mediumpurple;
+    text-decoration: none;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    padding: 0;
+    margin: 0;
+}
+
+.nav-links li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+.nav-links li a:hover {
+    color: #66fcf1;
+}
+
+/* --- FOOTER --- */
+footer {
+    width: 100%;
+    height: 120px;
+    background: linear-gradient(to right, #1e0033, #330066);
+    color: white;
+    padding: 20px;
+    text-align: center;
+    font-size: 1em;
+    /*margin-top: auto;
+    margin-bottom: 0;*/
+    margin: 0px;
+}
+
+.footer-content {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.footer-content .redes a {
+    color: #66fcf1;
+    text-decoration: none;
+    margin: 0 10px;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+.footer-content .redes a:hover {
+    color: mediumpurple;
+}
+
+/* Eliminar flechas de inputs type="numero de telefono" */
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
 }
