--- a/DOM-tp2/EJ4/css/styles.css
+++ b/DOM-tp2/EJ4/css/styles.css
@@ -101,7 +101,7 @@ body {
     font-weight: bold;
     font-size: 20px;
     font-family:monospace;
-    width: 20%;
+    width: auto;
     /*border: 2px solid #33c25e;*/
 }
 
