--- a/DOM-tp2/EJ4/css/styles4.css
+++ b/DOM-tp2/EJ4/css/styles4.css
@@ -22,6 +22,8 @@ body {
     margin-top: 30px;
     border-radius: 20px;
     overflow: hidden;
+    border: 2px solid #337dc2;
+    box-shadow: 1px 1px 50px #282829;
 
 }
 
