--- a/TP3-ClinicaSalud+/src/views/ejs/turnos.ejs
+++ b/TP3-ClinicaSalud+/src/views/ejs/turnos.ejs
@@ -27,8 +27,10 @@
     <button type="submit">Registrar</button>
   </form>
 </div>
+
+<%- include('partials/footer') -%>
 </body>
-</html>
+
 <!--
       
       <% if (esMedico) { %
