--- a/TP3-ClinicaSalud+/src/views/ejs/login.ejs
+++ b/TP3-ClinicaSalud+/src/views/ejs/login.ejs
@@ -1,7 +1,50 @@
 <!-- formulario de login d personal de la clinica con vista ejs-->
 
 <%- include('partials/head') -%>
+<style>
+  .formulario {
+    background-color: #f1f1f1;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    margin: 20px auto;
+    width: 80%;
+    max-width: 400px;
+  }
 
+  .formulario h3 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .formulario label {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  .formulario input[type="email"],
+  .formulario input[type="password"] {
+    width: 90%;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    margin-bottom: 20px;
+  }
+
+  .formulario button[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+  }
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    
+  }
+</style>
 <body>
   <%- include('partials/header') -%>
   <div class="titulos">
@@ -22,5 +65,6 @@
       <button type="submit">Ingresar</button>
     </form>
   </div>
+  <%- include('partials/footer') -%>
 </body>
 </html>
