--- a/TP3-ClinicaSalud+/src/views/ejs/partials/head.ejs
+++ b/TP3-ClinicaSalud+/src/views/ejs/partials/head.ejs
@@ -5,5 +5,31 @@
         <%= title %> 
     </title>
     <meta charset="utf-8">
-    <style> </style>
+    <style>
+        body {
+        background-color: #f1f1f1; 
+        font-family: monospace;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
+        width: 100%;
+        
+        
+        }
+     
+        title {
+            margin: 0;
+            padding: 0;
+            font-family: monospace;
+            font-size: 25px;
+            border: 8px;
+            background-color: #2cbef8;
+            color: #fff;
+            padding: 10px;
+            
+        }
+     </style>
 </head>
