--- a/TP3-ClinicaSalud+/src/views/ejs/pacientes.ejs
+++ b/TP3-ClinicaSalud+/src/views/ejs/pacientes.ejs
@@ -3,7 +3,7 @@
     <%- include('partials/header') -%>
     <main>
         <h2> <%= message %></h2>
-        <%- include ('partials/tabla_pacientes') -%>
+        <!-- <%- include ('partials/tabla_pacientes') -%> -->
         <!--agregar formulario para agregar pacientes?, concicional de que sea medico-->
     </main>
     <footer>
