--- a/TP3-ClinicaSalud+/src/views/ejs/pacientes.ejs
+++ b/TP3-ClinicaSalud+/src/views/ejs/pacientes.ejs
@@ -32,11 +32,17 @@
     margin-bottom: 30px;
   }
   th{
-     background-color: #e2f3f5;
+    /*width: 50%;*/
+    /*border: 1px solid #0e0813;*/
+    background-color: #e2f3f5;
     font-weight: bold;
   }
   tr:nth-child(even) {
     background-color: #f9f9f9;
+  }
+
+  td {
+    text-align: center;
   }
 
   a, button{
