medico en el authcontroller

--- a/TP3-ClinicaSalud+/src/views/ejs/pacientes.ejs
+++ b/TP3-ClinicaSalud+/src/views/ejs/pacientes.ejs
@@ -46,8 +46,8 @@
   }
 
   a, button{
-      padding: 8px 12px;
-    margin: 2px;
+    padding: 6px 8px;
+    margin: 1px;
     border: none;
     border-radius: 6px;
     font-weight: bold;
@@ -65,8 +65,8 @@
   }
 
   a[href*="editar"] {
-    background-color: #71cbd1;
-    color: #0e0813;
+    background-color: #6ef1f1;
+    
   }
 
   a[href*="editar"]:hover {
