--- a/TP3-ClinicaSalud+/src/views/ejs/turnos.ejs
+++ b/TP3-ClinicaSalud+/src/views/ejs/turnos.ejs
@@ -149,11 +149,11 @@
               </span>
             <% if (esMedico) { %>
               <div class="acciones">
-                <form action="/api/v1/turnos/<%= turno._id %>" method="POST">
+                <form action="/turnos/<%= turno.id %>" method="POST">
                   <input type="hidden" name="_method" value="DELETE">
                   <button type="submit">Eliminar</button>
                 </form>
-                <a href="/turnos/<%= turno._id %>/editar">Editar</a>
+                <a href="">Editar</a>
               </div>
             <% } %>
           </li>
@@ -164,7 +164,7 @@
     <% if (esMedico) { %>
       <div class="formulario">
         <h2>Registrar nuevo turno</h2>
-        <form id="formTurno" action="/api/v1/turnos" method="POST">
+        <form id="formTurno" action="/turnos" method="POST">
           <label>Paciente ID: <input type="number" name="pacienteId" required></label>
           <label>Fecha: <input type="text" name="fecha" placeholder="dd/mm/yyyy" required></label>
           <label>Hora: <input type="text" name="hora" placeholder="hh:mm" required></label>
